# PIAIC

./: .gitignore  assignment1.ts
Asignment 01/: assignment01.js  package.json
Assignments/Assignment1/: Assignment1.js  Assignment1.ts  package.json
Assignments/Assignment2/: assignment2.js  assignment2.ts
Assignments/Assignment3/: assignment3.js  assignment3.ts
Assignments/Assignment4/: assignment4.js  assignment4.ts  package.json
Assignments/RAGAssignment/: .env  data.txt  main.py  pyproject.toml
Assignments/RAGAssignment/myproject/: pyproject.toml
Exam/: index.js
class03/: assignment.ts
class05/: index.js  index.ts  package.json
classwork/: assignment1.ts
classwork/Asignment 01/: assignment01.ts  class3.js  class3.ts
classwork/class01/: index.js  index.ts
classwork/class03/: assignment.js
classwork/class04/: assignment.ts  index.js  index.ts  package.json
classwork/class05/: index.js  index.ts
classwork/class06/: calc.js  calc.ts  package-lock.json  package.json
npx-atm-batch-50-e/: package-lock.json  package.json
npx-tool/: package.json
test/: calc.js  calc.ts  index.js  index.ts  index1.ts  package-lock.json  package.json
