[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["Muhammad Usman <mehr.usman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-google-genai = "^1.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
